dockerignoreの追加・chat/pinの追加
